# wordle-solver

./: .gitignore  CMakeLists.txt  README.md  config.h.in  index.html  vcpkg.json  wordle-guess.js  wordle-solver-lib.data  wordle-solver-lib.js  wordle-solver-lib.wasm  wordle-source.js
.github/workflows/: build.yml  cmake.yml  codeql.yml  release.yml
src/: CMakeLists.txt  WordList.cc  WordList.h  WordleSolver.cc  WordleSolver.h  wordle-solver.cc
src/chrome-extension/: CMakeLists.txt  background-script.js  content-script.js  manifest.json  manifest.json.in  site-integration-septle.js  site-integration-wordle.js  site-integration.js
src/console/: CMakeLists.txt  Main.cc
src/html/: .htaccess  CMakeLists.txt  index.css  index.html  index.html.in  test.css  test.html  wordle-guess.js  wordle-letter.js  words-loader.js
src/lib/: CMakeLists.txt  TestSolver.cc  WordList.cc  WordList.h  WordleSolver.cc  WordleSolver.h  index.html
src/lib/word-lists/: septle-words.txt  wordhurdle-words.txt
